--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     font-family: ftff;
 }
 
+
 html,
 body {
     height: 100vh;
@@ -27,7 +28,31 @@ body {
 body {
     overflow-x: hidden;
 }
-
+.resume{
+   z-index:999;
+   border: none;
+   border-radius: 25px;
+   position:fixed;
+   background-color: #000000;
+   padding: 12px 18px;
+   font-size: 18px;
+   font-weight:bold;
+   top:92%;
+   right:5%;
+   overflow: auto;
+   box-shadow:  0 0 5px #03e9f4,
+   0 0 10px #03e9f4;
+   text-decoration: none;
+   color: white;
+}
+.resume:hover{
+    background-color: #000000;
+    color: rgba(245, 245, 245, 0.929);
+    box-shadow:  0 0 5px #ba352c,
+    0 0 25px #ba352c,
+    0 0 50px #ba352c,
+    0 0 100px #ba352c;
+}
 #parentofall {
     position: relative;
     width: 100%;
@@ -59,7 +84,7 @@ body {
     position: fixed;
     height: 100vh;
     width: 100vw;
-    z-index: 10;
+    z-index: 999999;
     top: 0%;
     left: 0%;
     background-color: rgb(0, 0, 0);
@@ -187,7 +212,6 @@ figure {
     0 0 50px #03e9f4,
     0 0 100px #03e9f4;
 }
-
 .hnav h3 {
     letter-spacing: 3px;
 }
