--- a/style.css
+++ b/style.css
@@ -26,28 +26,39 @@ body {
 body {
   overflow-x: hidden;
 }
-.resume {
-  z-index: 999;
-  border: none;
-  border-radius: 25px;
-  position: fixed;
-  background-color: #000000;
-  padding: 12px 18px;
-  font-size: 18px;
-  font-weight: bold;
-  top: 92%;
-  right: 5%;
+.resume2 , .resume1{
   overflow: auto;
   box-shadow: 0 0 5px #03e9f4, 0 0 10px #03e9f4;
   text-decoration: none;
-  color: white;
+  color: white;  
+  border-radius: 25px;
+  background-color: #000000;
+  padding: 12px 26px;
+  font-size: 18px;
+  font-weight: bold;
 }
-.resume:hover {
+.resume2{
+  left: 0%;
+
+}
+.resume1:hover , .resume2:hover{
   background-color: #000000;
   color: rgba(245, 245, 245, 0.929);
   box-shadow: 0 0 5px #ba352c, 0 0 25px #ba352c, 0 0 50px #ba352c,
     0 0 100px #ba352c;
 }
+#rem{
+  z-index: 999;
+  position: fixed;
+  top: 90%;
+  right: 10%;
+  width: 36%;
+  height: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 #parentofall {
   position: relative;
   width: 100%;
@@ -1199,4 +1210,5 @@ a:visited {
     margin:-12% ;
   }
 }
+
 
