--- a/style.css
+++ b/style.css
@@ -51,12 +51,15 @@ body {
   z-index: 999;
   position: fixed;
   top: 90%;
-  right: 10%;
-  width: 36%;
-  height: 5%;
+  width: 100vw;
+  height: 10%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:end;
+  gap:128px;
+  padding-right: 10%;
+
+  backdrop-filter: blur(10px);
 }
 
 #parentofall {
@@ -1023,6 +1026,22 @@ a:visited {
 /* this code is All Rights Reserved form aditya.tech */
 
 @media screen and (max-width: 500px) {
+  #rem{
+    width: 100vw;
+    top: 85%;
+    gap: 9px;
+  }
+  .resume2 , .resume1{
+    padding: 12px 38px;
+    font-size: .78rem;
+  }
+  .resume1:hover , .resume2:hover{
+    background-color: #000000;
+    color: rgba(245, 245, 245, 0.929);
+    box-shadow: 0 0 5px #ba352c, 0 0 25px #ba352c, 0 0 50px #ba352c,
+      0 0 100px #ba352c;
+  }
+
   #Modelinfo {
     width: 85%;
   }
