--- a/style.css
+++ b/style.css
@@ -655,7 +655,7 @@ a:visited {
   margin-top: 7.5px;
 }
 
-#p1line a {
+#p1line > a , .vide{
   height: 85%;
   width: 25%;
   border-radius: 10px;
@@ -663,6 +663,14 @@ a:visited {
   overflow: hidden;
 }
 
+.overlay-link{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000007;
+}
 #p1line a:hover {
   transform: scale(1.05);
 }
@@ -732,8 +740,14 @@ a:visited {
 }
 
 .s11 {
+  background-size: contain;
   background-size: cover;
   background-position: center;
+}
+
+#background-video {
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .s12 {
